# DRF

./: .env.sample  pyproject.toml
config/: settings.py  urls.py
lms/: models.py  paginators.py  permissions.py  tests.py  urls.py  validators.py
lms/management/commands/: fill.py
lms/migrations/: 0001_initial.py  0002_remove_lesson_course_lesson_course.py  0003_course_owner_lesson_owner.py  0004_course_price_lesson_price.py
lms/serializers/: course.py  lesson.py
lms/views/: course.py  lesson.py
users/: admin.py  models.py  services.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_subscriptions.py  0003_user_role.py  0004_merge_0003_subscriptions_0003_user_role.py  0005_payments_payment_id_payments_payment_link.py
users/serializers/: subscriptions.py
